# AI-Trading-ML

./: .env.example  .gitignore  .plan.md  CLI_SETUP.md  DEPLOYMENT.md  FOLDER_TREE.txt  PROJECT_STRUCTURE.md  README.md  RENDER_DEPLOYMENT.md  SUPABASE_SETUP.md  auth.md  cli_client.py  docker-compose.yml  prompt.md  start_backend.bat  start_cli.bat  test_cli.py  test_indian_stock.py  vercel.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  render.yaml  requirements.txt  test_prediction.py
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  graph.py  news_agent.py  predict_agent.py  ta_agent.py
backend/app/api/: auth.py  chat_history.py  predict.py  predictions_api.py  trades_api.py  watchlist_api.py
backend/app/api/middleware/: auth.py  rate_limit.py
backend/app/api/routes/: chat.py  cli.py  health.py  predictions.py
backend/app/core/: __init__.py  advanced_analysis.py  data_fetcher.py  indicators.py  market_structure.py
backend/app/db/: SETUP_INSTRUCTIONS.md  custom_auth_schema.sql  mongodb_client.py  redis_client.py  schema.sql  supabase_client.py
backend/app/middleware/: rate_limiter.py
backend/app/models/: database.py  schemas.py
backend/app/services/: auth_service.py  binance.py  chat_service.py  coincap.py  news.py  outcome_tracker.py  prediction_service.py  qwen_client.py  stock_intelligence.py  trade_service.py  twelve_data.py  watchlist_service.py  websocket.py  yahoo_finance.py
backend/app/utils/: helpers.py  logger.py
backend/tests/: test_agents.py  test_api.py
frontend/: .dockerignore  (+8 more)
(+23 files in other folders)
